Scale images in comments correctly to prevent scrollbars

--- a/webcompat/static/css/src/issue.css
+++ b/webcompat/static/css/src/issue.css
@@ -80,6 +80,7 @@
 .js-Issue-markdown img {
   max-width: calc(var(--unit-modul-m) - (var(--unit-space) * 4));
   max-height: calc(var(--unit-modul-m) - (var(--unit-space) * 4));
+  width: 100%;
 }
 
 /* var(--page-size-m) = 665px - vars not usable in queries */
